-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11.0.9-oracle, 16
-
Component/s: hotspot
-
b09
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8251382 | 11.0.10-oracle | Vladimir Kozlov | P3 | Resolved | Fixed | b01 |
Here is the call stack:
Stack: [0x0000700006a8e000,0x0000700006b8e000], sp=0x0000700006b8d7d0, free space=1021k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0xa6cb7c] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x68c
V [libjvm.dylib+0xa6d23b] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x3b
V [libjvm.dylib+0x2f3e3a] report_vm_error(char const*, int, char const*, char const*, ...)+0xaa
V [libjvm.dylib+0x5754b6] JVMCI::vlog(int, char const*, __va_list_tag*)+0xa6
V [libjvm.dylib+0x574eb0] JVMCI::event1(char const*, ...)+0xb0
V [libjvm.dylib+0x57be00] JVMCICompiler::print_compilation_timers()+0x30
V [libjvm.dylib+0x2cf643] CompileBroker::print_times(bool, bool)+0x383
V [libjvm.dylib+0x4a6da2] print_statistics()+0x32
V [libjvm.dylib+0x4a7186] before_exit(JavaThread*)+0x2e6
V [libjvm.dylib+0xa0c423] Threads::destroy_vm()+0xc3
V [libjvm.dylib+0x51ffd5] jni_DestroyJavaVM+0xa5
C [libjli.dylib+0x4fd6] JavaMain+0xc36
C [libjli.dylib+0x75e9] ThreadJavaMain+0x9
C [libsystem_pthread.dylib+0x6109] _pthread_start+0x94
C [libsystem_pthread.dylib+0x1b8b] thread_start+0xf
I have the suspicion the real culprit is in CompileBroker.cpp:
void CompileBroker::print_times(bool per_compiler, bool aggregate) {
#if INCLUDE_JVMCI
<...>
// In hosted mode, print the JVMCI compiler specific counters manually.
if (!UseJVMCICompiler) {
JVMCICompiler::print_compilation_timers();
}
#else // INCLUDE_JVMCI
<...>
Stack: [0x0000700006a8e000,0x0000700006b8e000], sp=0x0000700006b8d7d0, free space=1021k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0xa6cb7c] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x68c
V [libjvm.dylib+0xa6d23b] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x3b
V [libjvm.dylib+0x2f3e3a] report_vm_error(char const*, int, char const*, char const*, ...)+0xaa
V [libjvm.dylib+0x5754b6] JVMCI::vlog(int, char const*, __va_list_tag*)+0xa6
V [libjvm.dylib+0x574eb0] JVMCI::event1(char const*, ...)+0xb0
V [libjvm.dylib+0x57be00] JVMCICompiler::print_compilation_timers()+0x30
V [libjvm.dylib+0x2cf643] CompileBroker::print_times(bool, bool)+0x383
V [libjvm.dylib+0x4a6da2] print_statistics()+0x32
V [libjvm.dylib+0x4a7186] before_exit(JavaThread*)+0x2e6
V [libjvm.dylib+0xa0c423] Threads::destroy_vm()+0xc3
V [libjvm.dylib+0x51ffd5] jni_DestroyJavaVM+0xa5
C [libjli.dylib+0x4fd6] JavaMain+0xc36
C [libjli.dylib+0x75e9] ThreadJavaMain+0x9
C [libsystem_pthread.dylib+0x6109] _pthread_start+0x94
C [libsystem_pthread.dylib+0x1b8b] thread_start+0xf
I have the suspicion the real culprit is in CompileBroker.cpp:
void CompileBroker::print_times(bool per_compiler, bool aggregate) {
#if INCLUDE_JVMCI
<...>
// In hosted mode, print the JVMCI compiler specific counters manually.
if (!UseJVMCICompiler) {
JVMCICompiler::print_compilation_timers();
}
#else // INCLUDE_JVMCI
<...>
- backported by
-
JDK-8251382 -XX:+CITime triggers guarantee(events != NULL) in jvmci.cpp:173
-
- Resolved
-
- relates to
-
JDK-8248321 [JVMCI] improve libgraal logging and fatal error handling
-
- Resolved
-