8250233: -XX:+CITime triggers guarantee(events != NULL) in jvmci.cpp:173

Add missing EnableJVMCI flag check. Refactoring compiler print statistic code.

Reviewed-by: thartmann