src/hotspot/share/jvmci/jvmciCompiler.cpp
@@ -141,11 +141,15 @@ void JVMCICompiler::compile_method(ciEnv* env, ciMethod* target, int entry_bci, 
 
 // Print compilation timers and statistics
 void JVMCICompiler::print_timers() {
+  tty->print_cr("    JVMCI Compile Time:      %7.3f s", stats()->total_time());
   print_compilation_timers();
 }
 
 // Print compilation timers and statistics
 void JVMCICompiler::print_compilation_timers() {
-  JVMCI_event_1("JVMCICompiler::print_timers");
-  tty->print_cr("       JVMCI code install time:        %6.3f s",    _codeInstallTimer.seconds());
+  double code_install_time = _codeInstallTimer.seconds();
+  if (code_install_time != 0.0) {
+    tty->cr();
+    tty->print_cr("    JVMCI code install time:        %6.3f s", code_install_time);
+  }
 }
