src/share/vm/compiler/abstractCompiler.hpp
@@ -29,7 +29,6 @@
 
 typedef void (*initializer)(void);
 
-#if INCLUDE_JVMCI
 // Per-compiler statistics
 class CompilerStatistics VALUE_OBJ_CLASS_SPEC {
   friend class VMStructs;
@@ -56,17 +55,20 @@ class CompilerStatistics VALUE_OBJ_CLASS_SPEC {
   Data _osr;       // stats for OSR compilations
   int _nmethods_size; //
   int _nmethods_code_size;
-  int bytes_per_second() {
+
+  double total_time() { return _standard._time.seconds() + _osr._time.seconds(); }
+
+  double bytes_per_second() {
     int bytes = _standard._bytes + _osr._bytes;
     if (bytes == 0) {
-      return 0;
+      return 0.0;
     }
-    double seconds = _standard._time.seconds() + _osr._time.seconds();
-    return seconds == 0.0 ? 0 : (int) (bytes / seconds);
+    double seconds = total_time();
+    return seconds == 0.0 ? 0.0 : (bytes / seconds);
   }
+
   CompilerStatistics() : _nmethods_size(0), _nmethods_code_size(0) {}
 };
-#endif
 
 class AbstractCompiler : public CHeapObj<mtCompiler> {
  private:
@@ -89,9 +91,7 @@ class AbstractCompiler : public CHeapObj<mtCompiler> {
  private:
   Type _type;
 
-#if INCLUDE_JVMCI
   CompilerStatistics _stats;
-#endif
 
  public:
   AbstractCompiler(Type type) : _type(type), _compiler_state(uninitialized), _num_compiler_threads(0) {}
@@ -136,9 +136,7 @@ class AbstractCompiler : public CHeapObj<mtCompiler> {
     ShouldNotReachHere();
   }
 
-#if INCLUDE_JVMCI
   CompilerStatistics* stats() { return &_stats; }
-#endif
 };
 
 #endif // SHARE_VM_COMPILER_ABSTRACTCOMPILER_HPP
